2009-01-03  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -rmflag option, -rawfb vt support, bpp < 8 support
	  for rawfb, find /dev/video better. Fix reverse SSL connection
	  for DH.  Some improvements for CUPS TS helper, restart if needed.

2008-12-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: 0.9.6 release.  Some strtok bugfixes. rename -tlsvnc
	  to -anontls.	Disable ssl caching.  No cert creation prompting
	  in inetd or bg modes.  waitpid a bit more carefully on ssl
	  helpers.  Tune ssl initial timeouts.	Let -create user specify
	  starting X display.  fix -rfbport prompt gui for older tk.
	  -sslonly option. Error if no -ssl with related options. -rand
	  option.  -ssl implies -ssl SAVE

2008-11-22  Karl Runge <runge@karlrunge.com>
	* x11vnc: x11vnc.desktop file. -reopen, -dhparams, -sslCRL,
	  -setdefer options. -rfbport PROMPT VeNCrypt and TLSVNC SSL/TLS
	  encryption support.  Tweaks to choose_delay() algorithm.
	  -ssl ANON anonymouse Diffie-Hellman mode.  Fix bugs in certs
	  management.  Additions to tray=setpass naive user mode.

2008-11-09  Karl Runge <runge@karlrunge.com>
	* x11vnc: add zeroconf external helpers (avahi-publish and
	  dns-sd).  Alias -zeroconf.  Close pipeinput_fh on exit.
	  Kludge to make -solid work on MacOSX console.  Attempt at
	  cpp macros to disable newer libvncserver interfaces.

2008-10-29  Karl Runge <runge@karlrunge.com>
	* x11vnc: -http_oneport for single port HTTP and VNC.
	  Improve find_display wrt lsof blocking with -b.

2008-10-19  Karl Runge <runge@karlrunge.com>
	* x11vnc: -chatwindow for chat window on X console using SSVNC
	  as a helper.	Print suggestion for X_ShmAttach failure.
	  Allow -scale WxH for different X- and Y-scaling factors.
	  Workaround for missing -enc cipher EVP_aes_256_cfb.  Modify
	  message digest and salt/IV parameters.  Try to improve compile
	  time by breaking up large if blocks.

2008-09-21  Karl Runge <runge@karlrunge.com>