@@ -1,5 +1,5 @@
 
-x11vnc README file                         Date: Sat Jan  3 23:43:28 EST 2009
+x11vnc README file                         Date: Wed Jan  7 21:16:30 EST 2009
 
 The following information is taken from these URLs:
 
@@ -12266,7 +12266,7 @@ x11vnc: a VNC server for real X displays
    Here are all of x11vnc command line options:
 % x11vnc -opts      (see below for -help long descriptions)
 
-x11vnc: allow VNC connections to real X11 displays. 0.9.7 lastmod: 2009-01-03
+x11vnc: allow VNC connections to real X11 displays. 0.9.7 lastmod: 2009-01-07
 
 x11vnc options:
   -display disp            -auth file               -N                     
@@ -12390,7 +12390,7 @@ libvncserver-tight-extension options:
 
 % x11vnc -help
 
-x11vnc: allow VNC connections to real X11 displays. 0.9.7 lastmod: 2009-01-03
+x11vnc: allow VNC connections to real X11 displays. 0.9.7 lastmod: 2009-01-07
 
 (type "x11vnc -opts" to just list the options.)
 
