@@ -2,7 +2,7 @@
 .TH X11VNC "1" "January 2009" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.9.7, lastmod: 2009-01-03
+         version: 0.9.7, lastmod: 2009-01-07
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
